# Manyshot-CoT-ICL

./: .gitignore  README.md  detectiveqa_best_of_n_first.py  detectiveqa_infer.py  detectiveqa_infer_first.py  gsm8k_best-of-n.py  gsm8k_infer.py  gsm8k_infer_reinforce.py  gsm8k_infer_reinforce_first.py  gsm8k_infer_reinforce_wr.py  math_best-of-n-firstans.py  math_infer.py  math_infer_reinforce.py  math_infer_reinforce_first.py  math_infer_reinforce_wr.py  pyproject.toml  requirements.txt
cot_icl/: __init__.py  config.py  demos.py  paths.py
cot_icl/cds/: __init__.py  detectiveqa_data.py  detectiveqa_ordering.py  embeddings.py  math_data.py  ordering.py  tsp.py
cot_icl/detectiveqa/: __init__.py  data.py
cot_icl/grading/: __init__.py  detectiveqa.py  gsm8k.py  math.py
cot_icl/prompts/: __init__.py  demo_modes.py  gsm8k.py
cot_icl/runners/: __init__.py  common.py  detectiveqa.py  detectiveqa_reinforce.py  gsm8k.py  gsm8k_reinforce.py  math.py  math_reinforce.py
cot_icl/runners/generation/: __init__.py  detectiveqa_pool.py  gsm8k_pool.py  math_pool.py
data/: README.md
scripts/: cds_order_detectiveqa.py  cds_order_math.py
