[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cot-icl"
version = "0.1.0"
description = "Official code for Many-Shot CoT-ICL (ICML 2026)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "datasets>=2.14",
    "tqdm>=4.65",
    "vllm>=0.4",
    "transformers>=4.40",
    "openai>=1.0",
    "sympy>=1.12",
    "scipy>=1.10",
    "sentence-transformers>=2.6",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cot_icl*"]
